bug 244349 : Bulletproof webservice proxy code against crashes when server sends invalid SOAP response. r+sr=jst